Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19308

interop 2.15 vs master crash in migration mdd_xattrs_migrate_prep()) ASSERTION( tobj != ((void *)0) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.17.0
    • Lustre 2.17.0, Lustre 2.15.6
    • None
    • 3
    • 9223372036854775807

      I think the culprit is LU-19245 https://review.whamcloud.com/60578 ("LU-19245 dne: update lmm_oi in dir migrate")

      the result is conf-sanity DNE upgrade test from 2.9 crashes with 2.15 and 2.16 servers

      [15779.174346] Lustre: DEBUG MARKER: /usr/sbin/lctl set_param -n mdt.t32fs*.enable_remote_dir=1
      [15779.425979] Lustre: 473653:0:(osd_internal.h:1335:osd_trans_exec_op()) t32fs-MDT0001: opcode 2: before 259 < left 610, rollback = 2
      [15779.428441] Lustre: 473653:0:(osd_internal.h:1335:osd_trans_exec_op()) Skipped 47 previous similar messages
      [15779.430368] Lustre: 473653:0:(osd_handler.c:1962:osd_trans_dump_creds())   create: 3/12/0, destroy: 0/0/0
      [15779.432253] Lustre: 473653:0:(osd_handler.c:1962:osd_trans_dump_creds()) Skipped 47 previous similar messages
      [15779.434393] Lustre: 473653:0:(osd_handler.c:1969:osd_trans_dump_creds())   attr_set: 2/2/0, xattr_set: 8/610/0
      [15779.436361] Lustre: 473653:0:(osd_handler.c:1969:osd_trans_dump_creds()) Skipped 47 previous similar messages
      [15779.438330] Lustre: 473653:0:(osd_handler.c:1979:osd_trans_dump_creds())   write: 5/55/0, punch: 0/0/0, quota 1/3/0
      [15779.440395] Lustre: 473653:0:(osd_handler.c:1979:osd_trans_dump_creds()) Skipped 47 previous similar messages
      [15779.442346] Lustre: 473653:0:(osd_handler.c:1986:osd_trans_dump_creds())   insert: 10/203/1, delete: 0/0/0
      [15779.444229] Lustre: 473653:0:(osd_handler.c:1986:osd_trans_dump_creds()) Skipped 47 previous similar messages
      [15779.446179] Lustre: 473653:0:(osd_handler.c:1993:osd_trans_dump_creds())   ref_add: 4/4/0, ref_del: 0/0/0
      [15779.448084] Lustre: 473653:0:(osd_handler.c:1993:osd_trans_dump_creds()) Skipped 47 previous similar messages
      [15779.625998] LustreError: 471101:0:(mdd_dir.c:3910:mdd_xattrs_migrate_prep()) ASSERTION( tobj != ((void *)0) ) failed:
      [15779.628192] LustreError: 471101:0:(mdd_dir.c:3910:mdd_xattrs_migrate_prep()) LBUG
      [15779.629705] CPU: 1 PID: 471101 Comm: mdt00_001 Kdump: loaded Tainted: G           OE     -------- -  - 4.18.0-553.58.1.el8_lustre.x86_64 #1
      [15779.632142] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [15779.633295] Call Trace:
      [15779.633890]  dump_stack+0x41/0x60
      [15779.634700]  lbug_with_loc.cold.6+0x5/0x43 [libcfs]
      [15779.635771]  mdd_xattrs_migrate_prep+0x941/0xb40 [mdd]
      [15779.636953]  mdd_dir_layout_shrink+0xdc0/0x1290 [mdd]
      [15779.638014]  ? mdd_layout_change+0x60a/0x1890 [mdd]
      [15779.639029]  mdd_layout_change+0x60a/0x1890 [mdd]
      [15779.640021]  ? __mdt_stripe_get+0xf7/0x570 [mdt]
      [15779.641175]  mdt_dir_layout_update+0x798/0x1120 [mdt]
      [15779.642250]  mdt_reint_setxattr+0xe6b/0x1180 [mdt]
      [15779.643288]  mdt_reint_rec+0x123/0x270 [mdt]
      [15779.644217]  mdt_reint_internal+0x4d2/0x980 [mdt]
      [15779.645226]  mdt_reint+0x5d/0x110 [mdt]
      [15779.646083]  tgt_request_handle+0x401/0x1d40 [ptlrpc]
      [15779.647781]  ptlrpc_server_handle_request+0x2ca/0xd70 [ptlrpc]
      [15779.649066]  ? lprocfs_counter_add+0x117/0x180 [obdclass]
      [15779.650519]  ptlrpc_main+0xbc2/0x1490 [ptlrpc]
      [15779.651528]  ? __schedule+0x2d9/0x870
      [15779.652305]  ? ptlrpc_wait_event+0x5b0/0x5b0 [ptlrpc]
      [15779.653426]  kthread+0x134/0x150
      [15779.654155]  ? set_kthread_struct+0x50/0x50
      [15779.655041]  ret_from_fork+0x35/0x40
      [15779.655867] Kernel panic - not syncing: LBUG

      Example reports https://testing.whamcloud.com/test_sets/c69ab0a5-05b9-48c8-b93c-2e1609897e8b

      https://testing.whamcloud.com/test_sets/fc2c8989-9072-4751-a098-224564a63d73

       

            zam Alexander Zarochentsev
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: