LU-19308 mdd: mdd_xattr_migrate_prep check

Check the source object type to determine
whether lmm_oi needs to be updated.

Fixes: 3e04d1197d ("LU-19245 dne: update lmm_oi in dir migrate")
HPE-bug-id: LUS-13117
Signed-off-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Change-Id: I86e3d49e95ceaa05e788169965a7fe26b88e31d5
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62347
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>